<resources>
    <string name="app_name"></string>
    <string name="action_settings">Settings</string>
    <string name="gebeya_all_rights_reserved">&#169; Gebeya. All Rights Reserved.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_up">Sign up</string>
    <string name="talent">Talent</string>
    <string name="client">Client</string>
    <string name="client_sign_up">Client Sign up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="individual_account">Individual Account</string>
    <string name="company_account">Company Account</string>
    <string name="next">Next</string>
    <string name="budget">Budget</string>
    <string name="pending">Pending</string>
    <string name="book_project">Book Project</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="get_started">Get Started</string>
    <string name="read_and_accepted">I have read and accepted the</string>
    <string name="already_member">Already a member?</string>
    <string name="terms_and_conditions"><a href="http://www.google.com/">Terms And Conditions</a></string>
    <string name="sign_up_successful">Sign up Successful</string>
    <string name="talent_sign_up">Talent Sign up</string>
    <string name="last_name">Last Name</string>
    <string name="education">Education</string>
    <string name="professional_certificates">Professional Certificates</string>
    <string name="select_languages">Select Languages</string>
    <string name="sql">SQL</string>
    <string name="java">Java</string>
    <string name="javascript">JavaScript</string>
    <string name="csharp">C#</string>
    <string name="cpp">C++</string>
    <string name="python">Python</string>
    <string name="php">PHP</string>
    <string name="ruby_rails">Ruby on Rails</string>
    <string name="ios_swift">iOS/Swift</string>
    <string name="sign_up_home">Sign Up For Free</string>
    <string name="login">Log in</string>
    <string name="some_text">This is some dumb text that no one should really ever read because of what maybe the sum of obstacles over the period of time has made this incompatible.</string>
    <string name="tab_text">Tab</string>
    <string name="dawit_abraham">Dawit Abraham</string>
    <string name="android_developer">Android Developer</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="notification">Notifications</string>
    <string name="my_projects">My Projects</string>
    <string name="saved_projects">Saved Projects</string>
    <string name="to_do_list">To Do List</string>
    <string name="browse_talents">Browse Talents</string>
    <string name="about">About</string>
    <string name="options">options</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="projects">Projects</string>
    <string name="Gebeya">Gebeya</string>
    <string name="add">Add</string>
</resources>
