<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
       style="@style/inputField">
        <CheckBox
            style="@style/checkbox"
            android:text="@string/sql"/>

        <CheckBox
            style="@style/checkbox"
            android:text="@string/java"/>
        <CheckBox
            style="@style/checkbox"
            android:text="@string/javascript"/>
        <CheckBox
            style="@style/checkbox"
            android:text="@string/csharp"/>
        <CheckBox
            style="@style/checkbox"
            android:text="@string/cpp"/>
        <CheckBox
            style="@style/checkbox"
            android:text="@string/python"/>
        <CheckBox
            style="@style/checkbox"
            android:text="@string/php"/>
        <CheckBox
            style="@style/checkbox"
            android:text="@string/ruby_rails"/>
        <CheckBox
            style="@style/checkbox"
            android:text="@string/ios_swift"/>
    </LinearLayout>

</LinearLayout>