<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/gebeya_logo"/>

    <TextView
        style="@style/textView.title"
        android:text="@string/talent_sign_up"/>

    <LinearLayout
        style="@style/inputField"
        >
        <EditText
            style="@style/editText.email"/>

        <EditText
            style="@style/editText.email"
            android:hint="@string/first_name"/>

        <EditText
            style="@style/editText.email"
            android:hint="@string/last_name"/>

        <EditText
            style="@style/editText.email"
            android:hint="@string/city"/>

        <EditText
            style="@style/editText.email"
            android:hint="@string/country"/>

        <EditText
            style="@style/editText.textPassword"/>

        <Button
            android:layout_marginTop="@dimen/dimen_16"
           style="@style/button.actionPrimary"
            android:text="@string/next"/>
    </LinearLayout>

    <include layout="@layout/already_member"/>

</LinearLayout>