<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="320dp"
              android:layout_height="match_parent">

        <LinearLayout
            android:background="@color/gebeyaPrimary"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen_12">
            <ImageView
                android:paddingTop="@dimen/dimen_16"
                android:paddingRight="@dimen/dimen_16"
                android:layout_gravity="right"
                android:layout_width="@dimen/dimen_40"
                android:layout_height="@dimen/dimen_40"
                android:src="@drawable/ic_mode_edit_white_24dp"/>

            <ImageView
                android:background="@drawable/drawer_profile_image_bg"
                android:padding="@dimen/dimen_2"
                android:layout_gravity="center"
                android:layout_width="@dimen/dimen_120"
                android:layout_height="@dimen/dimen_120"
                android:src="@drawable/ic_dave"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/dimen_16"
                android:textColor="@color/white"
                android:text="@string/dawit_abraham"
                android:textSize="@dimen/text_large"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/android_developer"
                android:textSize="@dimen/text_small"/>
        </LinearLayout>
       <TextView
          style="@style/textView.menu"
          android:text="@string/home"/>
        <TextView
            style="@style/textView.menu"
            android:text="@string/inbox"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:background="@drawable/drawer_menu_item_background">
        <TextView
            android:layout_weight="8"
            android:layout_width="0dp"
            style="@style/textView.menu"
            android:text="@string/notification"/>
        <ImageView
            android:src="@drawable/ic_notification"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="0.5dp">
    </View>
    <TextView
        style="@style/textView.menu"
        android:text="@string/my_projects"/>
    <TextView
        style="@style/textView.menu"
        android:text="@string/saved_projects"/>
    <TextView
        style="@style/textView.menu"
        android:text="@string/to_do_list"/>
    <View
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="0.5dp">
    </View>
    <TextView
        style="@style/textView.menu"
        android:text="@string/about"/>
    <TextView
        style="@style/textView.menu"
        android:text="@string/terms_and_conditions"/>
    <TextView
        style="@style/textView.menu"
        android:text="@string/action_settings"/>

</LinearLayout>