<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <include layout="@layout/gebeya_logo"
        android:id="@id/logoImageView"/>

    <TextView
        style="@style/textView.title"
        android:text="@string/client_sign_up"
        android:id="@id/titleTextView"/>

    <LinearLayout
        android:id="@+id/input_fields"
        style="@style/inputField">

        <EditText
            style="@style/editText"
            android:hint="@string/first_name" />

        <EditText
            style="@style/editText"
            android:hint="@string/second_name" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <Button
            style="@style/button.actionPrimary"
            android:text="@string/get_started"/>
    </LinearLayout>

    <include
        android:id="@+id/read_accept"
        layout="@layout/accept_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <include layout="@layout/already_member"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

</LinearLayout>