<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_gebeya_large"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/logoImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_sign_up"
        android:textSize="32sp"
        android:textColor="@color/gebeyaPrimary"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:id="@+id/titleTextView"
        android:layout_below="@id/logoImageView"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/repeat_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:textColor="@color/gebeyaPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/individual_account"
                android:textSize="18sp"/>
            <ImageView
                android:layout_marginLeft="12dp"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_info"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:textColor="@color/gebeyaPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_account"
                android:textSize="18sp"/>
            <ImageView
                android:layout_marginLeft="12dp"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_info"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@color/gebeyaPrimary"
            android:textSize="@dimen/text_large"
            android:textAllCaps="false"
            android:text="@string/next"/>
    </LinearLayout>


</RelativeLayout>