<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gebeya.gebeyaenterprise.SignInActivity"
    app:errorEnabled="true"
    app:passwordToggleEnabled="false"
    android:orientation="vertical">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:src="@drawable/ic_gebeya_large"
    android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="36sp"
        android:textColor="@color/colorSplashScreen"
        android:layout_gravity="center"
        android:padding="16dp"
        android:layout_marginTop="26dp"
        android:id="@+id/textView" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:autoLink="all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"/>

    <Button
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorSplashScreen"
        android:textSize="@dimen/text_large"
        android:textAllCaps="false"
        android:text="@string/sign_in"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="New User? Sign Up"
        android:paddingTop="20dp"/>
</LinearLayout>
