<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gebeya.gebeyaenterprise.fragment.SignInFragment"
    app:errorEnabled="true"
    android:orientation="vertical">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:src="@drawable/ic_gebeya_large"
    android:layout_marginTop="16dp"
    android:layout_centerHorizontal="true"
    android:id="@+id/logoImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="32sp"
        android:textColor="@color/gebeyaPrimary"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:id="@+id/signInTextView"
        android:layout_below="@id/logoImageView"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signInTextView">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address" />


            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"

                />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:autoLink="all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColorLink="@color/colorPrimary"/>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@color/gebeyaPrimary"
            android:textSize="@dimen/text_large"
            android:textAllCaps="false"
            android:text="@string/sign_in"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="New User? Sign Up"
        android:layout_marginTop="60dp"
        android:id="@+id/signUpLink"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
