<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gebeya.gebeyaenterprise.SignUpActivity">

    <ImageView
        android:id="@id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gebeya_large"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="32sp"
        android:textColor="@color/colorGebeyaPrimary"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:id="@+id/signUpTextView"
        android:layout_below="@id/logoImageView"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_below="@+id/signUpTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGebeyaPrimary"
            android:textSize="@dimen/text_large"
            android:textAllCaps="false"
            android:text="@string/talent"
            android:layout_marginBottom="16dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_border"
            android:textSize="@dimen/text_large"
            android:textAllCaps="false"
            android:text="@string/client"/>
    </LinearLayout>
</RelativeLayout>
